--- a/FindElectricity/FEMine/ViewController/FEAddShopViewController.xib
+++ b/FindElectricity/FEMine/ViewController/FEAddShopViewController.xib
@@ -12,6 +12,7 @@
             <connections>
                 <outlet property="address" destination="r1C-Dq-6Vg" id="veL-KX-hdI"/>
                 <outlet property="contact" destination="p8W-vx-dCl" id="5iv-39-56f"/>
+                <outlet property="deleteBtn" destination="lu4-fe-LM8" id="2m0-A4-W4V"/>
                 <outlet property="headView" destination="NXf-Kp-FSb" id="2EF-6j-eGp"/>
                 <outlet property="imgName" destination="ruJ-BK-kLr" id="0EC-r9-CD2"/>
                 <outlet property="mapView" destination="D5j-oV-LC5" id="XKu-ol-bL7"/>
@@ -20,6 +21,7 @@
                 <outlet property="name" destination="TzK-51-o6O" id="4Ny-Rw-U6V"/>
                 <outlet property="other" destination="Yhs-EP-vYo" id="6wu-JS-Yoh"/>
                 <outlet property="pcq" destination="TQU-Mm-i5H" id="Q9A-1T-lRH"/>
+                <outlet property="shopImg" destination="lQ5-iH-yf7" id="VnX-5x-Xf9"/>
                 <outlet property="tableView" destination="FES-5M-7hy" id="Ii0-5p-Qmx"/>
                 <outlet property="telephone" destination="jfg-op-uYR" id="jbc-wY-KdG"/>
                 <outlet property="upLoadBtn" destination="TUj-VZ-u1f" id="doe-5b-IZr"/>
@@ -50,6 +52,11 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
+                <imageView hidden="YES" clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lQ5-iH-yf7">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="617"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                    <gestureRecognizers/>
+                </imageView>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JmF-J1-yYZ">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
@@ -115,7 +122,9 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="UVJ-p3-F3p" firstAttribute="top" secondItem="FES-5M-7hy" secondAttribute="bottom" id="1U2-oH-bxI"/>
+                <constraint firstItem="UVJ-p3-F3p" firstAttribute="top" secondItem="lQ5-iH-yf7" secondAttribute="bottom" id="3mt-NG-exu"/>
                 <constraint firstItem="FES-5M-7hy" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="Acw-dV-Qma"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="lQ5-iH-yf7" secondAttribute="trailing" id="K1v-HG-tbU"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="UVJ-p3-F3p" secondAttribute="bottom" id="LO6-PD-c1p"/>
                 <constraint firstAttribute="trailing" secondItem="UVJ-p3-F3p" secondAttribute="trailing" id="NL8-RL-b8U"/>
                 <constraint firstItem="FES-5M-7hy" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Oq9-Nl-nRd"/>
@@ -123,6 +132,8 @@
                 <constraint firstItem="JmF-J1-yYZ" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="RBG-rC-EXB"/>
                 <constraint firstItem="JmF-J1-yYZ" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="a4S-7S-FmQ"/>
                 <constraint firstItem="JmF-J1-yYZ" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="fCK-5I-W1B"/>
+                <constraint firstItem="lQ5-iH-yf7" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="fIa-lc-cdv"/>
+                <constraint firstItem="lQ5-iH-yf7" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="jsU-MC-BoC"/>
                 <constraint firstItem="UVJ-p3-F3p" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lDu-2Z-N7B"/>
                 <constraint firstItem="JmF-J1-yYZ" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="r7b-43-7fw"/>
             </constraints>
@@ -130,7 +141,7 @@
             <point key="canvasLocation" x="-95.200000000000003" y="151.57421289355324"/>
         </view>
         <view contentMode="scaleToFill" id="NXf-Kp-FSb">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="587"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fkV-Q1-ie4">
@@ -284,6 +295,28 @@
                             </state>
                             <connections>
                                 <action selector="btnAction:" destination="-1" eventType="touchUpInside" id="FUL-DS-6dn"/>
+                            </connections>
+                        </button>
+                        <button hidden="YES" opaque="NO" tag="7" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lu4-fe-LM8">
+                            <rect key="frame" x="339" y="4" width="28" height="26"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal" title="X">
+                                <color key="titleColor" red="0.65490196079999996" green="0.65490196079999996" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="btnAction:" destination="-1" eventType="touchUpInside" id="wuQ-E1-nyf"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" tag="8" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O3V-Wt-WhP">
+                            <rect key="frame" x="158" y="6" width="173" height="24"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <state key="normal">
+                                <color key="titleColor" red="0.65490196079999996" green="0.65490196079999996" blue="0.65490196079999996" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="btnAction:" destination="-1" eventType="touchUpInside" id="3fk-5R-KSJ"/>
                             </connections>
                         </button>
                     </subviews>
@@ -463,7 +496,7 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
                 <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="D5j-oV-LC5" customClass="FECycleMap">
-                    <rect key="frame" x="-1" y="336" width="375" height="206"/>
+                    <rect key="frame" x="-1" y="336" width="375" height="240"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 </view>
@@ -471,7 +504,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="SDu-uq-Wdv"/>
-            <point key="canvasLocation" x="-95.200000000000003" y="766.41679160419801"/>
+            <point key="canvasLocation" x="-95.200000000000003" y="781.25937031484261"/>
         </view>
     </objects>
     <resources>
